# geno2phenoTB

./: .actrc  .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  MANIFEST.in  README.rst  meta.yaml  setup.cfg
.github/workflows/: ci.yml
docs/: _key_contributors.rst  acknowledgments.rst  cli-usage.rst  cli.rst  conf.py  index.rst  installation.rst  readme.rst  references.rst  requirements.txt  spelling_wordlist.txt
src/geno2phenotb/: __init__.py  annotate_vcf.py  geno2phenotb.py  installation_test.py  parse_args.py  predict.py  preprocess.py  utils.py
src/geno2phenotb/static/AMK/: AMK_RNCV_mcc_best_estimator.joblib
src/geno2phenotb/static/CAP/: CAP_RNCV_average_precision_best_estimator.joblib  CAP_RNCV_average_precision_best_estimator_feature_importances.npy  CAP_repeated_nested_cv_results.json
src/geno2phenotb/static/DCS/: DCS_RNCV_average_precision_best_estimator.joblib  DCS_RNCV_average_precision_best_estimator_feature_importances.npy  DCS_repeated_nested_cv_results.json
src/geno2phenotb/static/EMB/: EMB_RNCV_average_precision_best_estimator.joblib  EMB_RNCV_average_precision_best_estimator_feature_importances.npy  EMB_repeated_nested_cv_results.json
src/geno2phenotb/static/ETH/: ETH_RNCV_average_precision_best_estimator.joblib  ETH_RNCV_average_precision_best_estimator_feature_importances.npy  ETH_repeated_nested_cv_results.json
src/geno2phenotb/static/FQ/: FQ_RNCV_mcc_best_estimator.joblib
src/geno2phenotb/static/INH/: INH_RNCV_average_precision_best_estimator.joblib  INH_RNCV_average_precision_best_estimator_feature_importances.npy  INH_repeated_nested_cv_results.json
src/geno2phenotb/static/KAN/: KAN_RNCV_average_precision_best_estimator.joblib  KAN_RNCV_average_precision_best_estimator_feature_importances.npy  KAN_repeated_nested_cv_results.json
src/geno2phenotb/static/PAS/: PAS_RNCV_average_precision_best_estimator.joblib  PAS_RNCV_average_precision_best_estimator_feature_importances.npy  PAS_repeated_nested_cv_results.json
src/geno2phenotb/static/PZA/: PZA_RNCV_average_precision_best_estimator.joblib  PZA_RNCV_average_precision_best_estimator_feature_importances.npy  PZA_repeated_nested_cv_results.json
src/geno2phenotb/static/RIF/: RIF_RNCV_mcc_best_estimator.joblib
src/geno2phenotb/static/STR/: STR_RNCV_average_precision_best_estimator.joblib  STR_RNCV_average_precision_best_estimator_feature_importances.npy  STR_repeated_nested_cv_results.json
src/geno2phenotb/static/ground_truth/ERR551304/: ERR551304_feature_importance_evaluation.tsv
src/geno2phenotb/static/test_files/ERR551304_pre/Called_low_freq/: ERR551304_X.gatk_position_variants_cf2_cr2_fr15_ph4_outmode001.tab
src/geno2phenotb/static/test_files/ERR551304_pre/Called_super_low_freq/: ERR551304_X.gatk_position_variants_cf2_cr2_fr1_ph1_outmode001.tab  ERR551304_X.gatk_position_variants_cf2_cr2_fr1_ph1_outmode001_mod.tsv
tests/: conftest.py  g2p-build.yaml  g2p-test.yaml
