# This file is used to configure your project.
# Read more about the various options under:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://setuptools.pypa.io/en/latest/references/keywords.html

[metadata]
name = geno2phenoTB
version = 1.0.0
description = Machine learning based engine to predict Mycobacterium tuberculosis drug resistance using whole-genome sequencing data
author = Bernhard Reuter, Jules Kreuer
author_email = bernhard-reuter@gmx.de
maintainer = Bernhard Reuter
maintainer_email = bernhard-reuter@gmx.de
license = LGPL-3.0-only
license_files = LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/msmdev/geno2phenoTB
# Add here related links, for example:
project_urls =
    Documentation = https://geno2phenotb.readthedocs.io/en/latest/
#    Source = https://github.com/pyscaffold/pyscaffold/
#    Changelog = https://pyscaffold.org/en/latest/changelog.html
#    Tracker = https://github.com/pyscaffold/pyscaffold/issues
#    Conda-Forge = https://anaconda.org/conda-forge/pyscaffold
#    Download = https://pypi.org/project/PyScaffold/#files
#    Twitter = https://twitter.com/PyScaffold

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = Mac, Linux

# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python


[options]
zip_safe = False
packages = find_namespace:
package_dir =
    =src
include_package_data = True

# Require a min/specific Python version
python_requires = ==3.8.17

install_requires =
    importlib-metadata

[options.packages.find]
where = src

[options.extras_require]
dev =
    setuptools
    sphinx>=5.0,<7.0
    sphinx-autodoc-annotation
    sphinx-autodoc-typehints>=1.10.3
    sphinx-copybutton
    sphinx_last_updated_by_git
    sphinx_rtd_theme
    sphinxcontrib-spelling==8.0
    mypy==1.2
    pre-commit

[options.entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = geno2phenotb.module:function
console_scripts =
    geno2phenotb = geno2phenotb.geno2phenotb:run

[tool:pytest]
# Specify command line options as you would do when invoking pytest directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
# CAUTION: --cov flags may prohibit setting breakpoints while debugging.
#          Comment those flags to avoid this pytest issue.
addopts =
    --cov geno2phenotb --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
testpaths = tests
# Use pytest markers to select/deselect specific tests
# markers =
#     slow: mark tests as slow (deselect with '-m "not slow"')
#     system: mark end-to-end system tests

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 100
extend_ignore = B028, E203, W503, D400, D401
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    build
    dist
    .eggs
    docs/conf.py

[mypy]
ignore_missing_imports = True


[doc8]
ignore-path=src/geno2phenotb/static,LICENSE.txt,docs/license.rst
max-line-length=100

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.3.1
package = geno2phenotb
extensions =
    github_actions
    pre_commit
